projects/core/assets/tailormap-styles.css
@import "inter-font.css";
@import "tailormap-styles-form.css";
@import "openlayers.css";

:root {
  --dialog-width-left: 0;
  --dialog-width-right: 0;
  --dialog-z-index: 998;
  --body-margin: 16px;
  --overlay-panel-z-index: 1000;
  --menubar-width: 70px;
  --map-control-size: 40px;
  --vh: 1vh;
  --vw: 1vw;
  --100vh: calc(100 * var(--vh));
  --100vw: calc(100 * var(--vw));

  --dark-primary-text: rgb(0, 10, 30);
  --light-primary-text: rgb(255, 255, 255);

  /* Palette */
  --palette-primary-50: rgb(236, 231, 255);
  --palette-primary-contrast-50: var(--dark-primary-text);
  --palette-primary-100: rgb(208, 195, 255);
  --palette-primary-contrast-100: var(--dark-primary-text);
  --palette-primary-200: rgb(177, 155, 255);
  --palette-primary-contrast-200: var(--dark-primary-text);
  --palette-primary-300: rgb(145, 114, 255);
  --palette-primary-contrast-300: var(--dark-primary-text);
  --palette-primary-400: rgb(122, 84, 255);
  --palette-primary-contrast-400: var(--light-primary-text);
  --palette-primary-500: rgb(98, 54, 255);
  --palette-primary-contrast-500: var(--light-primary-text);
  --palette-primary-600: rgb(90, 48, 255);
  --palette-primary-contrast-600: var(--light-primary-text);
  --palette-primary-700: rgb(80, 41, 255);
  --palette-primary-contrast-700: var(--light-primary-text);
  --palette-primary-800: rgb(70, 34, 255);
  --palette-primary-contrast-800: var(--light-primary-text);
  --palette-primary-900: rgb(52, 22, 255);
  --palette-primary-contrast-900: var(--light-primary-text);
  --palette-primary-A100: rgb(255, 255, 255);
  --palette-primary-contrast-A100: var(--dark-primary-text);
  --palette-primary-A200: rgb(252, 252, 255);
  --palette-primary-contrast-A200: var(--dark-primary-text);
  --palette-primary-A400: rgb(206, 201, 255);
  --palette-primary-contrast-A400: var(--dark-primary-text);
  --palette-primary-A700: rgb(184, 175, 255);
  --palette-primary-contrast-A700: var(--dark-primary-text);

  --palette-accent-50: rgb(242, 238, 255);
  --palette-accent-contrast-50: var(--dark-primary-text);
  --palette-accent-100: rgb(222, 213, 255);
  --palette-accent-contrast-100: var(--dark-primary-text);
  --palette-accent-200: rgb(200, 185, 255);
  --palette-accent-contrast-200: var(--dark-primary-text);
  --palette-accent-300: rgb(178, 156, 255);
  --palette-accent-contrast-300: var(--dark-primary-text);
  --palette-accent-400: rgb(162, 135, 255);
  --palette-accent-contrast-400: var(--dark-primary-text);
  --palette-accent-500: rgb(145, 114, 255);
  --palette-accent-contrast-500: var(--dark-primary-text);
  --palette-accent-600: rgb(137, 106, 255);
  --palette-accent-contrast-600: var(--dark-primary-text);
  --palette-accent-700: rgb(126, 95, 255);
  --palette-accent-contrast-700: var(--light-primary-text);
  --palette-accent-800: rgb(116, 85, 255);
  --palette-accent-contrast-800: var(--light-primary-text);
  --palette-accent-900: rgb(98, 66, 255);
  --palette-accent-contrast-900: var(--light-primary-text);
  --palette-accent-A100: rgb(255, 255, 255);
  --palette-accent-contrast-A100: var(--dark-primary-text);
  --palette-accent-A200: rgb(255, 255, 255);
  --palette-accent-contrast-A200: var(--dark-primary-text);
  --palette-accent-A400: rgb(237, 234, 255);
  --palette-accent-contrast-A400: var(--dark-primary-text);
  --palette-accent-A700: rgb(216, 208, 255);
  --palette-accent-contrast-A700: var(--dark-primary-text);

  --primary-color: rgb(98, 54, 255);
  --error-color: #ff3636;
  --disabled-color: rgb(241, 241, 241);
  --border-color: #e1e1e1;
  --text-color: rgb(0, 10, 30);
  --disabled-text-color: rgba(0, 10, 30, 0.5);

  --primary-color-0_5: rgba(98, 54, 255, 0.5);
  --primary-color-0_1: rgba(98, 54, 255, 0.1);
  --error-color-0_5: rgba(255, 54, 54, 0.5);
  --map-overlay-background-0_8: rgba(255, 255, 255, 0.8);
  --snackbar-background-color: #0c0524;

  --max-control-height: calc(var(--vh) * 100 - (var(--body-margin) * 2));
  --max-control-width: calc(var(--vw) * 100 - (var(--menubar-width) + var(--body-margin) * 2));

  --box-shadow-top: 0 1px 0 0 rgba(0, 0, 0, 0.05), 0 -3px 4px 0 rgba(0, 0, 0, 0.08);
}

html {
  box-sizing: border-box;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

html,
body {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  border: 0;
}

.cdk-overlay-container {
  z-index: calc(var(--overlay-panel-z-index) + 100) !important;
}

.tailormap-menu-panel.mat-mdc-menu-panel {
  min-width: 170px;
}

.resize-active {
  user-select: none;
}

[ng-version],
.mat-mdc-dialog-container,
.form-field textarea,
.cdk-overlay-container {
  font-family: Inter, sans-serif;
  font-weight: 400;
  color: var(--text-color);
  font-size: 14px;
}

[ng-version] h1,
[ng-version] h2 {
  font-size: 16px;
  font-weight: 600;
  letter-spacing: 0;
  line-height: 24px;
  margin: 0;
}

[ng-version] a {
  color: #1a8fea;
}

[ng-version] a:hover {
  color: var(--primary-color);
}

.toggle-button {
  background-color: #fff;
}

button.toggle-button--active.mat-mdc-button-base.mdc-button,
button.toggle-button--active.mat-mdc-button-base.mdc-button--outlined,
button.toggle-button--active.mat-mdc-button-base.mdc-button--unelevated,
.toggle-button--active {
  color: var(--primary-color);
}

.map-control-button-container {
  display: flex;
  flex-direction: row;
  box-shadow: 0 1px 0 0 rgba(0,0,0,0.05), 0 3px 4px 0 rgba(0,0,0,0.08);
  border-radius: 3px;
}

.map-control-button,
.map-control-button.mdc-button--unelevated {
  --base-button-height: var(--map-control-size);
  background-color: #fff;
  border: 0 none;
  width: var(--map-control-size);
  padding: 0;
  cursor: pointer;
  min-width: 40px;
}

.map-control-button.mdc-button--unelevated > mat-icon {
  width: calc(var(--map-control-size) - 16px);
  height: calc(var(--map-control-size) - 16px);
  margin: 0;
}

.mat-mdc-button-base.button--active,
.button--active {
  background-color: var(--primary-color-0_1);
}

.mat-mdc-button-base.button--active,
.button--active,
.mat-mdc-button-base.button--active mat-icon,
.button--active mat-icon {
  color: var(--primary-color);
}

.cdk-overlay-container .mat-mdc-snack-bar-container {
  --mdc-snackbar-container-color: var(--snackbar-background-color);
  --mat-mdc-snack-bar-button-color: var(--palette-primary-contrast-500);
  background-color: var(--snackbar-background-color);
  color: #fff;
  padding: 16px;
  border-radius: 2px;
}

.cdk-overlay-container .mat-mdc-snack-bar-container .mat-mdc-snack-bar-action button {
  color: #fff;
  font-weight: bold;
  text-decoration: underline;
}

.mat-mdc-menu-panel[role="menu"] {
  min-height: 54px;
}

.mat-mdc-menu-content .mat-mdc-menu-item {
  height: 38px;
  line-height: 38px;
  min-height: 38px;
}

mat-form-field + mat-form-field {
  margin-top: 16px;
}

